--- a/src/Pages/Home/index.css
+++ b/src/Pages/Home/index.css
@@ -35,6 +35,19 @@ div.introContainer>p {
 }
 
 div.introContainer>button {
-    /* display: none; */
     font-family: bakh;
+    width:195px;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 7px;
+}
+
+div.introContainer>button.goalBut {
+    margin-right: 312px;
+    margin-top: 80px;
+}
+
+div.introContainer>button.infoBut {
+    margin-right: 25px;
+    margin-top: 80px;
 }
