--- a/src/Pages/Home/index.css
+++ b/src/Pages/Home/index.css
@@ -1,53 +1,61 @@
-div.introContainer {
-    width: 100%;
-    height: 762px;
-    margin-top: -35px;
-    background: url("./../../Images/Intro/introBG.png");
-    background-size: 640px 762px;
-    background-repeat: no-repeat;
-}
+ div.introContainer {
+     width: 100%;
+     height: 762px;
+     margin-top: -35px;
+     background: url("./../../Images/Intro/introBG.png");
+     background-size: 640px 762px;
+     background-repeat: no-repeat;
+ }
 
-div.introContainer>h1 {
+ div.introContainer>h1 {
 
-    padding-top: 250px;
-    padding-right: 100px;
-    font-size: 50px;
-    font-weight: normal;
-    color: #043D72;
-}
+     padding-top: 250px;
+     padding-right: 100px;
+     font-size: 50px;
+     font-weight: normal;
+     color: #043D72;
+ }
 
-div.introContainer>hr {
-    width: 60px;
-    border-width: 5px;
-    border: 2.5px solid #FDEA00;
-    background-color: #FDEA00;
-    ;
-    margin-right: 100px;
-    margin-top: -20px;
-}
+ div.introContainer>hr {
+     width: 60px;
+     border-width: 5px;
+     border: 2.5px solid #FDEA00;
+     background-color: #FDEA00;
+     ;
+     margin-right: 100px;
+     margin-top: -20px;
+ }
 
-div.introContainer>p {
-    margin-right: 100px;
-    margin-top: 20px;
-    color: #616D76;
-    font-size: 20px;
-    width: 456px;
-}
+ div.introContainer>p {
+     margin-right: 100px;
+     margin-top: 20px;
+     color: #616D76;
+     font-size: 20px;
+     width: 456px;
+ }
 
-div.introContainer>button {
-    font-family: bakh;
-    width:195px;
-    height: 50px;
-    font-size: 20px;
-    border-radius: 7px;
-}
+ div.introContainer>.btn-home>button {
+     font-family: bakh;
+     width: 195px;
+     height: 50px;
+     font-size: 20px;
+     border-radius: 7px;
+ }
 
-div.introContainer>button.goalBut {
+ .btn-home {
+     width: 500px;
+     display: flex;
+     justify-content: space-around;
+     margin-right: 6%;
+ }
+
+
+ /* div.introContainer>button.goalBut {
     margin-right: 312px;
     margin-top: 80px;
-}
+} */
 
-div.introContainer>button.infoBut {
+ /* div.introContainer>button.infoBut {
     margin-right: 25px;
     margin-top: 80px;
-}
+} */
