--- a/src/Fonts/fonts.css
+++ b/src/Fonts/fonts.css
@@ -8,3 +8,8 @@
     font-family: bakh;
     src: url(./Yekan\ Bakh\ EN\ 05\ Medium.ttf);
 }
+
+@font-face {
+    font-family: gabriola;
+    src: url(./gabriola\ Font\ Download.ttf);
+}
