--- a/src/Component/Footer/footer.css
+++ b/src/Component/Footer/footer.css
@@ -6,117 +6,270 @@ ul{
 }
 
 .FooterHolder{
-    border:1px solid red;
-    height: 570px;
-    width: 100%;
+    height:568px;
     background: url(./../../Images/Footer/map.png);
+    background-size: 715px 568px;
     background-repeat: no-repeat;
-    background-position: 550px;
+    background-position: 550px 0px;
+    margin-top:150px;
 }
 
-div > .FooterContact{
-    width: 290px;
-    height: 135px;
-    text-align: left;
-    color: #2D527C;
+.FooterHolder > .footerContact{
+    direction: ltr;
     font-size: 29px;
-    margin-top: 270px;
-    margin-right: 725px;
     font-family: gabriola;
-} 
+    color: #2D527C;
+    margin-left: 265px;
+    padding-top: 270px;
+}
 
-div > .FooterContact > li:nth-child(1){
+.FooterHolder > .footerContact > p{
+    margin: 0px;
+}
+
+.FooterHolder > .footerContact > p:nth-child(1){
     background: url(./../../Images/Footer/mail.png);
     background-repeat: no-repeat;
-    background-position: 0 7px;
-    background-size:30px;
+    background-size: 30px;
     padding-left: 50px;
-    cursor:pointer;
-} 
+    background-position: 0 7px;
+}
 
-div > .FooterContact > li:nth-child(2){
+.FooterHolder > .footerContact > p:nth-child(2){
     background: url(./../../Images/Footer/call.png);
     background-repeat: no-repeat;
-    background-position: 0 10px;
-    background-size:30px;    
+    background-size: 30px;
     padding-left: 50px;
-    cursor:pointer;
-} 
+    background-position: 0 9px;
+}
 
-div > .FooterContact > li:nth-child(3){
+.FooterHolder > .footerContact > p:nth-child(3){
     background: url(./../../Images/Footer/group.png);
     background-repeat: no-repeat;
-    background-position: 0 10px;
-    background-size:30px;
+    background-size: 30px;
     padding-left: 50px;
-    padding-top: 3px;
-} 
-
-div > .FooterLocation{
-    width: 534px;
-    height: 70px;
-    color: #636363;
-    font-size: 23px;
-    font-family: bakh;
-    margin-right: 110px;
-    margin-top: 55px;
-    background: url(./../../Images/Footer/pointer.png);
-    background-repeat: no-repeat;
-    background-position: -10px;
-    float:right
-} 
-
-div > .FooterLocation > li{
-    margin-right: 75px;
-    padding-top: 18px;
+    background-position: 0 7px;
 }
 
-div > .FooterSocial{
-    width: 282px;
-    height: 50px;
-    margin-top: 65px;
-    margin-right: 118px;
-    display: inline-block;
-    margin-bottom: 0;
+.FooterHolder > .footerSocial{
+    float:left;
+    margin-top: 60px;
 }
 
-div > .FooterSocial > li{
+.FooterHolder > .footerSocial > div{
     display: inline-block;
-    width:50px;
     height:50px;
+    width:50px;
     opacity: .75;
 }
 
-div > .FooterSocial > li:nth-child(1){
+.FooterHolder > .footerSocial > div:nth-child(1){
     background: url(./../../Images/Footer/linkedin.png);
-    background-size: 50px;
     background-repeat: no-repeat;
+    background-size: 50px;
+    margin-left: 8px;
 }
 
-div > .FooterSocial > li:nth-child(2){
+.FooterHolder > .footerSocial > div:nth-child(2){
     background: url(./../../Images/Footer/pinterest.png);
-    background-size: 50px;
     background-repeat: no-repeat;
-    margin-right: 8px;
+    background-size: 50px;
+    margin-left: 8px;
 }
 
-div > .FooterSocial > li:nth-child(3){
+.FooterHolder > .footerSocial > div:nth-child(3){
     background: url(./../../Images/Footer/whatsapp.png);
-    background-size: 50px;
     background-repeat: no-repeat;
-    margin-right: 8px;
+    background-size: 50px;
+    margin-left: 8px;
 }
 
-div > .FooterSocial > li:nth-child(4){
+.FooterHolder > .footerSocial > div:nth-child(4){
     background: url(./../../Images/Footer/twitter.png);
-    background-size: 50px;
     background-repeat: no-repeat;
-    margin-right: 8px;
+    background-size: 50px;
+    margin-left: 8px;
 }
 
-div > .FooterSocial > li:nth-child(5){
+.FooterHolder > .footerSocial > div:nth-child(5){
     background: url(./../../Images/Footer/instagram.png);
-    background-size: 50px;
     background-repeat: no-repeat;
-    margin-right: 8px;
+    background-size: 50px;
+    margin-left: 235px;
 }
+
+.FooterHolder > .footerLocation{
+    margin-top: 43px;
+    height:80px;
+    background: url(./../../Images/Footer/pointer.png);
+    background-size: 475px 80px;
+    background-repeat: no-repeat;
+    background-position:620px 0px;
+}
+
+.FooterHolder > .footerLocation > p{
+    padding-top: 26px;
+    padding-right: 240px;
+    font-size: 20px;
+    color: #636363;
+}
+
+
+
+@media screen and (max-width:1262px){
+
+    .FooterHolder{
+        background-size: 483px 384px;
+        background-position: 290px 0px;
+        margin-top:-75px;
+        height:384px;
+    }
+    
+    .FooterHolder > .footerContact{
+        font-size: 18px;
+        margin-left: 95px;
+        padding-top: 167px;
+    }
+    
+    .FooterHolder > .footerContact > p:nth-child(1){
+        background-size: 20px;
+        padding-left: 30px;
+        background-position: 0 3px;
+    }
+    
+    .FooterHolder > .footerContact > p:nth-child(2){
+        background-size: 20px;
+        padding-left: 30px;
+        background-position: 0 5px;
+    }
+    
+    .FooterHolder > .footerContact > p:nth-child(3){
+        background-size: 20px;
+        padding-left: 30px;
+        background-position: 0 5px;
+    }
+    
+    .FooterHolder > .footerSocial{
+        margin-top: 63px;
+    }
+    
+    .FooterHolder > .footerSocial > div{
+        height:32px;
+        width:32px;
+        opacity: .75;
+    }
+    
+    .FooterHolder > .footerSocial > div:nth-child(1){
+        background-size: 32px;
+        margin-left: 8px;
+    }
+    
+    .FooterHolder > .footerSocial > div:nth-child(2){
+        background-size: 32px;
+        margin-left: 8px;
+    }
+    
+    .FooterHolder > .footerSocial > div:nth-child(3){
+        background-size: 32px;
+        margin-left: 8px;
+    }
+    
+    .FooterHolder > .footerSocial > div:nth-child(4){
+        background-size: 32px;
+        margin-left: 8px;
+    }
+    
+    .FooterHolder > .footerSocial > div:nth-child(5){
+        background-size: 32px;
+        margin-left: 75px;
+    }
+    
+    .FooterHolder > .footerLocation{
+        margin-top: 53px;
+        height:55px;
+        background-size: 345px 55px;
+        background-position:335px 0px;
+    }
+    
+    .FooterHolder > .footerLocation > p{
+        padding-top: 18px;
+        padding-right: 130px;
+        font-size: 13px;
+        color: #636363;
+    }
+
+}
+
+@media screen and (max-width:749px){
+
+    .FooterHolder{
+        background: url(./../../Images/Footer/mapRes.png);
+        background-size: 400px 230px;
+        background-position: 0px 0px;
+        margin-top:500px;
+        height:238px;
+    }
+    
+    .FooterHolder > .footerContact{
+        margin-left: 55px;
+        padding-top: 77px;
+        float:left;
+    }
+    
+    .FooterHolder > .footerSocial{
+        margin-top: 0px;
+        float:none;
+        padding-top: 143px;
+        margin-right: 0px;
+    }
+    
+    .FooterHolder > .footerSocial > div{
+        height:20px;
+        width:20px;
+        opacity: .75;
+
+    }
+    
+    .FooterHolder > .footerSocial > div:nth-child(1){
+        background-size: 20px;
+        margin-right: 53px;
+        margin-left:2px;
+    }
+    
+    .FooterHolder > .footerSocial > div:nth-child(2){
+        background-size: 20px;
+        margin-left:2px;
+    }
+    
+    .FooterHolder > .footerSocial > div:nth-child(3){
+        background-size: 20px;
+        margin-left: 2px;
+    }
+    
+    .FooterHolder > .footerSocial > div:nth-child(4){
+        background-size: 20px;
+        margin-left: 2px;
+    }
+    
+    .FooterHolder > .footerSocial > div:nth-child(5){
+        background-size: 20px;
+        margin-left: 0px;
+    }
+    
+    .FooterHolder > .footerLocation{
+        margin-top: -10px;
+        height:55px;
+        background-size: 304px 48px;
+        background-position:center;
+    }
+    
+    .FooterHolder > .footerLocation > p{
+        padding-top: 18px;
+        padding-right: 100px;
+        font-size: 12px;
+        color: #4d4d4d;
+    }
+
+}
+
+
