--- a/src/Component/Header/index.css
+++ b/src/Component/Header/index.css
@@ -1,7 +1,7 @@
 
 .header1{
     width:100%;
-    margin-top: 26px;
+    padding-top: 10px;
 }
 
 .header1 > .headerRow {
@@ -10,27 +10,20 @@
 }
 
 .header1 > .headerLogo{
-    width: 9.06%;
+    width: 45px;
     background: url(./../../Images/header/logo.png);
     font-size: 24px;
-    margin-right: 58px;
     height:82px;
-    background-position:  50% 0;
+    margin-right: 100px;
+    background-position:  50% 12px;
     background-repeat: no-repeat;
-    background-size: 50px;
+    background-size: 45px;
     text-align: center;
 }
 
-.header1 > .headerLogo > p{
-    margin-top: 55px;
-    font-family: arshia;
-    letter-spacing: .6px;
-    color:#1762BC;
-}
 
 .header1 > .headerNavbar{
-    width: 28.51;
-    margin-right: 70px;
+    margin-right: 50px;
     text-align: right;
 }
 
@@ -41,65 +34,119 @@
 .header1 > .headerNavbar > p{
     cursor: pointer;
     display: inline-block;
-    font-size: 20px;
+    font-size: 17px;
     color: #808080;
     margin-left: 28px;
 }
 
 .header1 > .headerNavbar > p:nth-child(1){
     cursor: default;
-    font-size: 23px;
+    font-size: 20px;
     color: #043D72;
     text-decoration: underline;
 }
 
 .header1 > .headerLogin{
-    width:8.43%;
-    margin-right: 466px;
-    margin-top:20px;
-    height: 44px;
-    background-color:#00ADEF;
+    margin-right: 535px;
+    margin-top:10px;
     border-radius: 33px;
     display: flex;
     justify-content: space-around;
-}
-
-.header1 > .headerLogin > .loginUser:hover{
-    background-color: #0093cd;
 }
 
 .header1 > .headerLogin > .loginUser{
     transition: .5s;
     background: url(./../../Images/header/user.png) center;
     background-repeat: no-repeat;
-    background-size: 29px;
-    height:29px;
-    width:29px;
+    background-size: 23px;
+    height:30px;
+    width:30px;
     display: inline-block;
     margin-top: 2px;
     margin-left: 10px;
     padding:5px;
     border-radius:50%;
     cursor: pointer;
+    border-radius: 50%;
+    background-color:#00ADEF;
 }
 
-.header1 > .headerLogin > .loginSearch:hover{
-    background-color: #0093cd;
-}
 
 .header1 > .headerLogin > .loginSearch{
     transition: .5s;
-    background: url(./../../Images/header/search.png) center;
+    background: url(./../../Images/header/shopping.png) center;
     background-repeat: no-repeat;
-    background-size: 26px;
-    height:29px;
-    width:29px;
+    background-size: 23px;
+    height:30px;
+    width:30px;
     display: inline-block;
     margin-top: 2px;
     margin-left: 10px;
     padding:5px;
     border-radius:50%;
     cursor: pointer;
+    background-color:#00ADEF;
+}
+
+
+@media screen and (max-width:1263px){
+
+    .header1 > .headerLogo{
+        margin-right: 40px;
+    }
+
+    .header1 > .headerNavbar{
+        margin-right: 40px;
+        padding-top: 2px;
+    }
+
+    .header1 > .headerNavbar > p{
+        font-size: 15px;
+        margin-left: 20px;
+    }
+
+    .header1 > .headerNavbar > p:nth-child(1){
+        font-size: 18px;
+    }
+
+    .header1 > .headerLogin{
+        margin-right: 235px;
+    }
+
+    .header1 > .headerLogin > .loginUser{
+        background-size: 18px;
+        height:20px;
+        width:20px;
+    }
+    
+    
+    .header1 > .headerLogin > .loginSearch{
+        background-size: 18px;
+        height:20px;
+        width:20px;
+    }
+    
+}
+
+@media screen and (max-width:749px){
+
+    .header1{
+        padding-top: 0px;
+    }
+    
+    .header1 > .headerLogo{
+        margin-right: 30px;
+        background-size: 35px;
+    }
+
+    .header1 > .headerNavbar > p{
+        display:none;
+    }
+
+    .header1 > .headerLogin{
+        margin-right: 195px;
+    }
+    
 }
 
 
