--- a/src/Component/NewsCard/NewsCard.css
+++ b/src/Component/NewsCard/NewsCard.css
@@ -1,27 +1,93 @@
-.MuiPaper-root > .newsCardMedia{
+
+div.newsCardCard{
+    height: 110px; 
+    box-shadow: 0px 0px 8px 1px rgba(0,0,0,.05);
+    border-radius: 8px;
+}
+
+.newsCardCard > .newsCardMedia{
     width:84px; 
     padding:13px; 
     border-radius:7px;
 }
 
-.MuiPaper-root > hr{
+.newsCardCard > hr{
     height:84px;
     border: .5px solid #00ADEF;
     background-color: #00ADEF; 
     margin-top: 12.5px;
 }
 
-.MuiPaper-root > .MuiBox-root > .MuiCardContent-root > .newsCardTitle{
+.newsCardCard > .MuiBox-root > .MuiCardContent-root > .newsCardTitle{
     font-family: bakh;
-    font-size: 15px;
+    font-size: 16px;
     color: #808080;
     margin-right: -2px;
 }
 
-.MuiPaper-root > .MuiBox-root > .MuiCardContent-root > .newsCardDescription{
+.newsCardCard > .MuiBox-root > .MuiCardContent-root > .newsCardDescription{
     font-family: bakh;
-    font-size: 11px;
+    font-size: 13px;
     color: #8E8E8E;  
     margin-top: 8px;
     margin-right: -2px;
+}
+
+
+/* tAB Responsive */
+
+@media screen and (max-width:1262px){
+
+    div.newsCardCard{
+        height: 83px; 
+    }
+
+    .newsCardCard > .newsCardMedia{
+        width:63px; 
+        padding:10px; 
+    }
+
+    .newsCardCard > hr{
+        height:62px;
+        margin-top: 10px;
+    }
+
+    .newsCardCard > .MuiBox-root > .MuiCardContent-root > .newsCardTitle{
+        font-size: 13px;
+        margin-right: -6px;
+        margin-top: -5px;
+    }
+
+    .newsCardCard > .MuiBox-root > .MuiCardContent-root > .newsCardDescription{
+        font-size: 10.5px;
+        margin-top: 5px;
+        margin-right: -6px;
+    }
+
+}
+
+@media screen and (max-width:749px){
+
+    div.newsCardCard{
+        height: 85px; 
+    }
+
+    .newsCardCard > .newsCardMedia{
+        width:65px; 
+        padding:12px; 
+    }
+
+    .newsCardCard > hr{
+        margin-top: 11px;
+    }
+
+    .newsCardCard > .MuiBox-root > .MuiCardContent-root > .newsCardTitle{
+        font-size: 14px;
+        margin-right: -3px;
+        margin-top: -6px;
+    }
+
+    .newsCardCard > .MuiBox-root > .MuiCardContent-root > .newsCardDescription{
+        margin-right: -3px;
+    }
 }
