--- a/src/Component/TeacherCard/TeacherCard.css
+++ b/src/Component/TeacherCard/TeacherCard.css
@@ -1,9 +1,10 @@
-@media screen and (max-width:1266px){
 
-    .teacherResponsiveClass{
-        display: none;
-    }
+div.teacherCardCard{
+    box-shadow:0px 3px 8px 1px rgba(0,0,0,.08); 
+    border-radius:10px;
+}
 
+div.teacherCardCard > .teacherCardMedia{
 }
 
 .MuiPaper-root > .MuiCardContent-root > .TeacherCardName{
@@ -12,6 +13,7 @@
     color:#585858;
     margin-top: -3px;
 }
+
 
 .MuiPaper-root > .MuiCardContent-root > .TeacherCardDescription{
     font-family: bakh;
@@ -54,5 +56,43 @@
     background: url('./../../Images/Teacher/whatsapp.png');
     background-size:20px;
     margin-right: 7px;
+}
+
+
+/* Tab Responsive */
+
+@media screen and (max-width:749px){
+
+    .teacherResponsiveClass{
+        display: none;
+    }
+
+}
+
+@media screen and (max-width:749px){
+
+    div.teacherCardCard > .teacherCardMedia{
+        height:138px;
+    }
+    
+    .MuiPaper-root > .MuiCardContent-root > .TeacherCardName{
+        font-size: 12px;
+    }
+    
+    
+    .MuiPaper-root > .MuiCardContent-root > .TeacherCardDescription{
+        font-size: 8.75px;
+        margin-top: 10px;
+    }
+    
+    .MuiPaper-root > .MuiCardContent-root > hr{
+        margin-top: 10px;
+    }
+    
+    .MuiPaper-root > .TeacherCardSocialHolder{
+        margin-bottom: -3px;
+    }
+    
+
 }
 
