--- a/src/Pages/Home/index.css
+++ b/src/Pages/Home/index.css
@@ -1,4 +1,10 @@
  
+ .home{
+    background: url('./../../Images/Home.png');
+    background-size:1262px;
+    background-repeat: no-repeat;
+ }
+
  .homeH2{
     width:166px;
     height:30px;
@@ -7,7 +13,7 @@
     color: #043D72;
     font-size: 25px;
     border-right: 5px solid #FDEA00;
-    margin-bottom: 25px;
+    margin-bottom: 60px;
  }
 
  .homeH2 > h2{
@@ -15,31 +21,53 @@
     font-weight: normal;
  }
 
+ .h21{
+    margin-top:-34px;
+    margin-bottom: 20px;
+ }
+
  .h22{
     width:225px;
+    margin-top:160px;
+    margin-bottom: -45px;
  }
 
  .h23{
     width:136px;
+    margin-top:180px;
+    margin-bottom: 5px;
  }
 
  .h24{
     width:224px;
+    margin-top:170px;
+    margin-bottom: 10px;
  }
 
  .h25{
     width:179px;
+    margin-top:175px;
+    margin-bottom: 10px;
  }
 
  .h26{
     width:341px;
+    margin-top:200px;
+    margin-bottom: 80px;
+ }
+
+ p.homeMore{
+    text-align:center;
+    font-size: 23px;
+    color: #0485C8;
+    margin-top: 50px;
  }
 
 
  div.introContainer {
      width: 100%;
      height: 762px;
-     margin-top: -35px;
+     margin-top: -50px;
      background: url("./../../Images/Intro/introBG.png");
      background-size: 640px 762px;
      background-repeat: no-repeat;
@@ -87,10 +115,6 @@
      margin-top: 95px;
  }
 
-
- div.introContainer> .btn-home > button.goalBut {
-} 
-
  div.introContainer> .btn-home > button.infoBut {
     margin-right: -65px;
 
@@ -120,10 +144,6 @@
     font-size: 23px;
 }
 
-.servicesCantainer > div{
-    background-color: rgb(2, 165, 54);
-}
-
 .servicesCantainer > div:nth-child(even){
     margin-bottom: 30px;
 }
@@ -132,7 +152,7 @@
     margin-top: 30px;
 }
 
-@media screen and (max-width:1266px){
+@media screen and (max-width:1262px){
 
     .servicesCantainer{
         grid-template-columns: repeat(4, 130px);
@@ -145,7 +165,7 @@
 
 }
 
-@media screen and (max-width:750px){
+@media screen and (max-width:749px){
 
     .servicesCantainer{
         grid-template-columns: repeat(2, 137px);
@@ -198,7 +218,7 @@
 }
 
 
-@media screen and (max-width:1266px){
+@media screen and (max-width:1262px){
 
     .categoryCantainer{
         padding:115px 208px 0px 75px;
@@ -211,7 +231,7 @@
 
 }
 
-@media screen and (max-width:750px){
+@media screen and (max-width:749px){
 
     .categoryCantainer{
         padding:115px 48px 0px 48px;
@@ -240,7 +260,7 @@
 }
 
 
-@media screen and (max-width:1266px){
+@media screen and (max-width:1262px){
 
     .courcesCantainer{
         grid-template-columns: repeat(3, 173px);
@@ -254,7 +274,7 @@
 
 }
 
-@media screen and (max-width:750px){
+@media screen and (max-width:749px){
 
     .courcesCantainer{
         grid-template-columns: repeat(2, 137px);
@@ -285,12 +305,12 @@
 }
 
 
-@media screen and (max-width:1266px){
+@media screen and (max-width:1262px){
 
     .newsCantainer{
         grid-template-columns: repeat(2, 291px);
         grid-auto-rows: 81px;
-        gap: 21px;
+        gap: 20px;
         padding:54px 75px 0px 75px;
     }
 
@@ -300,12 +320,12 @@
 
 }
 
-@media screen and (max-width:750px){
+@media screen and (max-width:749px){
 
     .newsCantainer{
         grid-template-columns: repeat(1, 304px);
         grid-auto-rows: 87px;
-        gap: 20px;
+        gap: 15px;
         padding:154px 48px 0px 48px;
     }
 
@@ -328,6 +348,7 @@
 
 .teacherCantainer > div{
     background-color: rgb(255, 255, 255);
+    border-radius: 10px;
 }
 
 
@@ -345,7 +366,7 @@
 
 }
 
-@media screen and (max-width:750px){
+@media screen and (max-width:749px){
 
     .teacherCantainer{
         grid-template-columns: repeat(2, 137px);
@@ -363,19 +384,111 @@
 /* idea */
 
 .ideaCantainer{
-    height:500px;
     background:url(./../../Images/Idea/ideabg.png);
     background-size: 428px 419px;
     background-repeat: no-repeat;
+    background-position: 225px 0px;
 }
 
-.ideaCantainer > div{
+.ideaCantainer > div.ideaInput{
     height:396px;
     width: 286px;
     box-shadow: 0px 3px 8px 1px rgba(0,0,0,.08);
     border-radius: 15px;
+    margin-right:238px;
+    padding-top:23px;
+    background-color: white;
+}
+
+
+/* idea Tab Responsive */
+
+@media screen and (max-width:1262px){
+
+    .ideaCantainer{
+        height:590px;
+        background-size: 450px 440px;
+        background-position: 72px 0px;
+        padding-top: 215px;
+    }
+    
+    .ideaCantainer > div.ideaInput{
+        margin-right:145px;
+        padding-top:0px
+    }
+}
+
+/* idea Mobile Responsive */
+
+@media screen and (max-width:749px){
+
+    .ideaCantainer{
+        height: 0px;
+        padding: 0px;
+    }
+    
+    .ideaCantainer > div.ideaInput{
+        margin-right:57px;
+        padding-top:0px;
+    }
 }
 
 
 
 
+@media screen and (max-width:1262px){
+
+    /* Intro */
+
+    div.introContainer {
+        background-size: 380px 452px;
+        background-position: 0 12px;
+    }
+
+    div.introContainer>h1 {
+        padding-right: 50px;
+        padding-bottom: 10px;
+        font-size: 40px;
+    }
+   
+    div.introContainer>hr {
+        margin-right: 50px;
+        margin-top: -15px;
+    }
+   
+    div.introContainer>p {
+        margin-right: 50px;
+        margin-top: 20px;
+        font-size: 18px;
+        width: 410px;
+    }
+   
+
+}
+
+
+@media screen and (max-width:749px){
+
+    /* Intro */
+
+    div.introContainer {
+        background-size: 313px 372px;
+        background-position: 0 15px;
+    }
+
+    div.introContainer> h1 {
+        padding-right: 48px;
+        font-size: 35px;
+        width:180px;
+    }
+
+    div.introContainer>p {
+        margin-right: 48px;
+        margin-top: 25px;
+        font-size: 13.33px;
+        width: 304px;
+        text-align: center;
+    }
+   
+
+}
