--- a/src/Component/Button/Btn.css
+++ b/src/Component/Button/Btn.css
@@ -1,12 +1,9 @@
+.mediumBtn {}
 
+.largeBtn {}
 
-.mediumBtn{
+.MuiButton-root {}
 
+.btnButton {
+    display: none;
 }
-
-.largeBtn{
-
-}
-
-.MuiButton-root{}
-
