--- a/src/Pages/CourseDetail/index.scss
+++ b/src/Pages/CourseDetail/index.scss
@@ -3,7 +3,7 @@
 .aboutCourse {
     width: 100%;
     height: 20rem;
-    @include flex-container();
+    @include flex-container($justify: center);
 
     @media (max-width: 60rem) {
         @include flex-container($dir: column);
