--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 
 .App{
-    /* width:1263px; */
+    width:1263px;
     margin:auto;
     font-family: bakh;
     direction:rtl;
 }
 
-@media screen and (max-width:1266px){
+@media screen and (max-width:1262px){
 
     .App{
         width:750px;
@@ -14,7 +14,7 @@
 
 }
 
-@media screen and (max-width:750px){
+@media screen and (max-width:749px){
 
     .App{
         width:400px;
