--- a/src/components/HomeIntro/HomeIntro.css
+++ b/src/components/HomeIntro/HomeIntro.css
@@ -99,6 +99,7 @@ div.introContainer>.btn-home>button.infoBut {
     div.introContainer {
         background-size: 380px 452px;
         background-position: 0 12px;
+        height: 460px;
     }
 
     div.introContainer>h1 {
@@ -130,6 +131,7 @@ div.introContainer>.btn-home>button.infoBut {
     div.introContainer {
         background-size: 313px 372px;
         background-position: 0 15px;
+        height: 385px;
     }
 
     div.introContainer>h1 {
