--- a/src/components/common/Button/Btn.css
+++ b/src/components/common/Button/Btn.css
@@ -14,6 +14,13 @@ button.smallBtnCh{
     font-family: bakh;
 }
 
+button.mediumBtnCh{
+    width:158px;
+    height:40px;
+    font-size: 16px;
+    font-family: bakh;
+}
+
 button.largeBtn{
     width:191px;
     height:49px;
