--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,6 +1,8 @@
 .registerHolder{
-    border: 1px solid red;
-    height:607px;
+    height:609px;
+    background: url('./../../assets/images/Register/bg.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 
 .registerHolder > .registerInputHolder{
@@ -12,6 +14,11 @@
     float:right;
     margin-top:125px;
     margin-right:125px;
+}
+
+.registerHolder > .registerInputHolder > .registerInputHolderReall{
+    margin-top:-45px;
+    margin-right: 10px;
 }
 
 .registerHolder > .registerInputHolder > p{
@@ -36,6 +43,11 @@
     margin-top: 20px;
 }
 
+.registerHolder > .registerInputHolder > .registerButtonHolderReall{
+    margin-top: 40px;
+    margin-right: -13px;
+}
+
 .registerHolder > .registerInputHolder > .registerInputHolderRemainder > .registerInputHolderRemainderP1{
     display: inline-block; 
     font-size: 14px;
@@ -55,4 +67,60 @@
     height:550px;
     background-repeat: no-repeat;
     background-position: 105px 57px;
+}
+
+
+/* Responsive */
+
+@media screen and (max-width:1262px){
+
+    .registerHolder > .registerInputHolder{
+        width: 304px;
+        height: 270px;
+        margin-top:65px;
+        margin-right:75px;
+    }
+
+    .registerHolder > .registerInputHolder > .registerInputHolderReall{
+        margin-top:-35px;
+        margin-right: 1px;
+    }
+
+    .registerHolder > .registerInputHolder > p{
+        font-size: 25px;
+        width: 153px;
+        padding-right: 7px;
+        margin-right: 20px;
+    }
+
+    .registerHolder > .registerInputHolder > .registerButtonHolderReall{
+        margin-top: 25px;
+        margin-right: -2px;
+    }
+
+    .registerHolder > .registerImageHolder{
+        background-size:271px 290px;
+        background-position: 62px 50px;
+        background-repeat: no-repeat;
+    }
+    
+}
+
+@media screen and (max-width:749px){
+
+    .registerHolder{
+        background: url('./../../assets/images/Register/bg2.png');
+        background-size: 100%;
+        background-repeat: no-repeat;
+    }
+
+    .registerHolder > .registerInputHolder{
+        margin-right:48px;
+        margin-top: 40px;
+    }
+
+    .registerHolder > .registerImageHolder{
+        display:none;
+    }
+    
 }
