--- a/src/components/common/Button/Btn.css
+++ b/src/components/common/Button/Btn.css
@@ -19,6 +19,15 @@ button.mediumBtnCh{
     height:40px;
     font-size: 16px;
     font-family: bakh;
+    margin-right: 68px;
+}
+
+button.mediumBtnCh2{
+    width:158px;
+    height:40px;
+    font-size: 16px;
+    font-family: bakh;
+    margin-right: 15px;
 }
 
 button.largeBtn{
@@ -30,9 +39,24 @@ button.largeBtn{
 
 @media screen and (max-width:1262px){
 
+    button.mediumBtnCh{
+        width:100px;
+        height:28px;
+        font-size: 12px;
+        margin-right: 37px;
+    }
+
+    button.mediumBtnCh2{
+        width:100px;
+        height:28px;
+        font-size: 12px;
+        margin-right: 15px;
+    }
+
+
     button.largeBtn{
         width:166px;
-        height:42px;
+        height:24px;
         font-size: 16px;
     }
 
@@ -52,6 +76,8 @@ button.largeBtn{
         font-size: 9px;
         font-family: bakh;
     }
+
+
 
 }
 
