--- a/src/screens/courseDetail/index.scss
+++ b/src/screens/courseDetail/index.scss
@@ -1,37 +1,178 @@
 @import "./../../global";
 
 .aboutCourse {
+    margin-top: 8rem;
     width: 100%;
-    height: 20rem;
+    // height: 20rem;
     @include flex-container($justify: center);
 
     @media (max-width: 60rem) {
-        @include flex-container($dir: column);
-        height: 25rem;
+        @include flex-container($dir: column-reverse);
     }
 
-    .photoCourse {
-        width: 30%;
-        border: 1px solid palegreen;
-        height: 100%;
-
-        @media (max-width: 60rem) {
-            width: 100%;
-        }
-    }
 
     .informCourse {
-        width: 60%;
-        border: 1px solid gold;
+        width: 40%;
         height: 100%;
 
-        @media (max-width: 60rem) {
+        @media (max-width: 1262px) {
+            width: 70%;
+            margin: auto;
+        }
+
+        // font-family: gabriola;
+        @media (max-width: 749px) {
             width: 100%;
+            margin: auto;
+        }
+
+        p {
+            font-size: 35px;
+            font-family: bakh;
+            color: $title;
+
+
+            @media (max-width: 60rem) {
+                width: 450px;
+                margin-bottom: 2rem;
+                margin-top: 2rem;
+            }
+
+            @media (max-width: 749px) {
+                font-size: 23px;
+            }
+        }
+
+        hr {
+            width: 60px;
+            border-width: 5px;
+            border: 2.5px solid #FDEA00;
+            background-color: #FDEA00;
+            margin-right: -2px;
+            margin-top: -30px;
+            margin-bottom: 2rem;
+
+            @media (max-width: 749px) {
+                margin-top: -25px;
+                margin-right: 0rem;
+            }
         }
 
         .information {
-            @include flex-container();
+            // width: 72%;
+            @include grid-container($gap: 2rem);
+            grid-template-areas: 'myArea .';
 
+            @media (max-width: 1262px) {
+                width: 100%;
+            }
+
+            @media (max-width: 60rem) {
+                width: 450px;
+            }
+
+            @media (max-width: 749px) {
+                width: 410px;
+                margin: auto;
+                @include grid-container($gap: 1rem);
+            }
+
+            height: auto;
+
+            .teacher {
+                grid-area: myArea;
+            }
+
+            div {
+                display: flex;
+                justify-content: normal;
+                align-items: center;
+
+                img {
+                    width: 30px;
+                }
+
+                span {
+                    padding-right: 5px;
+
+                    @media (max-width: 749px) {
+                        font-size: 13px;
+                    }
+                }
+            }
+
+            .timeStart img {
+                width: 27px;
+            }
+
+
+        }
+
+    }
+
+    .photoCourse {
+        position: relative;
+        // display: flex;
+        // justify-content: center;
+        width: 30%;
+        // border: 1px solid palegreen;
+        height: 100%;
+        margin-top: -60px;
+
+        @media (max-width: 60rem) {
+            width: 100%;
+            text-align: center;
+        }
+
+
+        @media (max-width: 1262px) {
+            margin-top: -20px;
+
+        }
+
+        img {
+            width: 380px;
+
+            @media (max-width: 1262px) {
+                width: 300px;
+            }
+        }
+
+
+        .offCourse {
+            position: absolute;
+            bottom: 1rem;
+            right: 3.5rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: white;
+
+            @media (max-width: 749px) {
+                bottom: 1rem !important;
+                right: 5.5rem !important;
+            }
+
+            @media (max-width: 60rem) {
+                right: 16.5rem;
+                bottom: 1rem;
+            }
+
+            @media (max-width: 1262px) {
+                right: 2.3rem;
+            }
+
+            @media (max-width: 1000px) {
+                right: 16.3rem;
+            }
+
+            .offCount {
+                font-size: 25px;
+            }
+
+            .offTitle {
+                font-size: 10px;
+            }
         }
     }
 }
