--- a/src/components/CardInNews/CardInNews.css
+++ b/src/components/CardInNews/CardInNews.css
@@ -1,108 +1,138 @@
-
-div.cardIncardInNews{
-    height: 130px; 
-    width: 465px;
-    box-shadow: 0px 0px 8px 1px rgba(0,0,0,.05);
-    border-radius: 10px;
-    position: relative;
+div.cardIncardInNews {
+  height: 130px;
+  width: 465px;
+  box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  position: relative;
 }
 
-.cardIncardInNews > .cardInNewsMedia{
-    width:100px; 
-    padding:13px; 
+.cardIncardInNews > .cardInNewsMedia {
+  width: 100px;
+  padding: 13px;
 }
 
-.cardIncardInNews > hr{
-    height:103px;
-    border: .5px solid #00ADEF;
-    background-color: #00ADEF; 
-    margin-top: 13px;
+.cardIncardInNews > hr {
+  height: 103px;
+  border: 0.5px solid #00adef;
+  background-color: #00adef;
+  margin-top: 13px;
+  margin-right: 3px;
+  margin-left: 0px;
 }
 
-.cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsTitle{
-    font-family: bakh;
-    font-size: 16px;
-    color: #808080;
-    margin-right: -2px;
+.cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsTitle {
+  font-family: bakh;
+  font-size: 16px;
+  color: #808080;
+  margin-top: 0px;
 }
 
-.cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsDescription{
-    font-family: bakh;
-    font-size: 13px;
-    color: #8E8E8E;  
-    margin-top: 8px;
-    margin-right: -2px;
+.cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsDescription {
+  font-family: bakh;
+  font-size: 13px;
+  color: #8e8e8e;
+  margin-top: 12px;
 }
 
-.cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsDate{
-    font-family: bakh;
-    font-size: 12px;
-    color: #00ADEF;  
-    text-decoration: underline;
-    margin-top: 10px;
-    margin-right: -2px;
+.cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsDate {
+  font-family: bakh;
+  font-size: 12px;
+  color: #00adef;
+  text-decoration: underline;
+  margin-top: 23px;
 }
 
-.cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsButton{
-    position: absolute;
-    top:87px;
-    left:15px;
+.cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsButton {
+  position: absolute;
+  top: 87px;
+  left: 15px;
 }
 
 /* tAB Responsive */
 
-@media screen and (max-width:1262px){
+@media screen and (max-width: 1262px) {
+  div.cardIncardInNews {
+    width: 290px;
+    height: 81px;
+  }
 
-    div.cardIncardInNews{
-        height: 83px; 
-    }
+  .cardIncardInNews > .cardInNewsMedia {
+    width: 61px;
+    padding: 13px;
+  }
 
-    .cardIncardInNews > .cardInNewsMedia{
-        width:63px; 
-        padding:10px; 
-    }
+  .cardIncardInNews > hr {
+    height: 54px;
+    border: 0.5px solid #00adef;
+    background-color: #00adef;
+    margin-top: 13px;
+    margin-right: -3px;
+    margin-left: 0px;
+  }
 
-    .cardIncardInNews > hr{
-        height:62px;
-        margin-top: 10px;
-    }
+  .cardIncardInNews > .MuiBox-root > .MuiCardContent-root{
+    margin-right: -6px;
+  }
 
-    .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsTitle{
-        font-size: 13px;
-        margin-right: -6px;
-        margin-top: -5px;
-    }
+  .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsTitle {
+    font-size: 13px;
+    margin-top: -4px;
+  }
 
-    .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsDescription{
-        font-size: 10.5px;
-        margin-top: 5px;
-        margin-right: -6px;
-    }
+  .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsDescription {
+    font-size: 9px;
+    margin-top: 5px;
+    margin-right: 0px;
+  }
 
+  .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsDate {
+    font-size: 9px;
+    margin-top: 8px;
+  }
+
+  .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsButton {
+    position: absolute;
+    top: 51px;
+    left: 9px;
+  }
 }
 
-@media screen and (max-width:749px){
+@media screen and (max-width: 749px) {
 
-    div.cardIncardInNews{
-        height: 85px; 
-    }
+  div.cardIncardInNews {
+    width: 304px;
+    height: 85px;
+  }
 
-    .cardIncardInNews > .cardInNewsMedia{
-        width:65px; 
-        padding:12px; 
-    }
+  .cardIncardInNews > .cardInNewsMedia {
+    width: 65px;
+  }
 
-    .cardIncardInNews > hr{
-        margin-top: 11px;
-    }
+  .cardIncardInNews > hr {
+    height: 58px;
+    margin-top: 13px;
+    margin-right: -3px;
+    margin-left: 0px;
+  }
 
-    .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsTitle{
-        font-size: 14px;
-        margin-right: -3px;
-        margin-top: -6px;
-    }
+  .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsTitle {
+    font-size: 13px;
+    margin-top: -4px;
+  }
 
-    .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsDescription{
-        margin-right: -3px;
-    }
+  .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsDescription {
+    font-size: 9px;
+    margin-top: 7px;
+  }
+
+  .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsDate {
+    font-size: 9px;
+    margin-top: 9px;
+  }
+
+  .cardIncardInNews > .MuiBox-root > .MuiCardContent-root > .cardInNewsButton {
+    position: absolute;
+    top: 54px;
+  }
+
 }
