--- a/src/components/NewsContainer/NewsContainer.css
+++ b/src/components/NewsContainer/NewsContainer.css
@@ -1,5 +1,5 @@
 .n21{
-    width: 285px;
+    width: 376px;
     margin-bottom: 55px;
     margin-top: 100px;
 }
@@ -11,4 +11,35 @@
     gap: 35px;
     margin-top: 50px;
     margin-bottom: 65px;
+}
+
+@media screen and (max-width: 1262px) {
+    .n21{
+        font-size: 18px;
+        width:270px;
+        border-right: 3.5px solid #FDEA00;
+        margin-bottom: 45px;
+        margin-top: 70px;
+    }
+
+    .CardInNewsContainer{
+        grid-template-columns: 290px 290px;
+        grid-template-rows: 81px 81px 81px;
+        gap: 20px;
+    }
+}
+
+@media screen and (max-width: 749px) {
+
+    .n21{
+        margin-bottom: 30px;
+    }
+
+    .CardInNewsContainer{
+        grid-template-columns: 290px;
+        grid-template-rows: 81px 81px 81px 81px 81px 81px;
+        gap: 20px;
+        margin-top: 30px;
+    }
+
 }
